# solana-nostd-entrypoint

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
example-program/: Cargo.toml
example-program/src/: lib.rs
example-program/tests/: integration.rs
solana-nostd-entrypoint/: Cargo.toml  README.md
solana-nostd-entrypoint/src/: entrypoint_nostd.rs  lib.rs
src/: entrypoint_nostd.rs  lib.rs
system/: Cargo.toml
system/src/: lib.rs
system/src/instructions/: advance_nonce_account.rs  allocate.rs  assign.rs  create_account.rs  mod.rs  transfer.rs
tests/: integration.rs
token/: Cargo.toml
token/src/: invoke_signed.rs  lib.rs
token/src/instructions/: close_account.rs  initialize_account_3.rs  mod.rs  sync_native.rs  transfer.rs  transfer_checked.rs
