[workspace]
members = ["solana-nostd-entrypoint", "example-program"]
resolver = "2"


[workspace.dependencies]
litesvm = "0.5.0"
solana-nostd-entrypoint = { path = "./solana-nostd-entrypoint" }
solana-define-syscall = "2.1"
solana-instruction = "2.1"
solana-msg = "2.1"
solana-program = "2.1"
solana-program-entrypoint = "2.1"
solana-program-error = "2.1"
solana-program-memory = "2.1"
solana-pubkey = "2.1"
solana-sdk = "2.1"
