[package]
name = "solana-nostd-example-program"
version = "0.1.0"
edition = "2021"
description = "An example usage of solana-nostd-entrypoint"
license = "MIT OR Apache-2.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
repository = "https://github.com/cavemanloverboy/solana-nostd-entrypoint"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-msg = { workspace = true }
solana-nostd-entrypoint = { workspace = true }
solana-program = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }

[dev-dependencies]
litesvm = { workspace = true }
solana-instruction = { workspace = true }
solana-sdk = { workspace = true }
