[package]
name = "solana-nostd-entrypoint"
version = "0.3.0"
edition = "2021"
description = "A zerocopy, no_alloc/no_std entrypoint for solana programs."
license = "MIT OR Apache-2.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
repository = "https://github.com/cavemanloverboy/solana-nostd-entrypoint"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
solana-program = "1.18.1"
