[package]
name = "solana-nostd-entrypoint"
version = "0.6.2"
edition = "2021"
description = "A zerocopy, no_alloc/no_std entrypoint for solana programs."
license = "MIT OR Apache-2.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
repository = "https://github.com/cavemanloverboy/solana-nostd-entrypoint"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-program-memory = { workspace = true }
solana-pubkey = { workspace = true }
